# gpu

./: README.md  arrayfire.md
array-exchange/: .gitignore  README.md  pyproject.toml
array-exchange/docs/: .gitignore
array-exchange/docs/source/: conf.py  index.rst
array-exchange/src/benchmark/: benchmarks.py  elements.py  meta.py
array-exchange/src/benchmark/analyze/: __init__.py
array-exchange/src/benchmark/elems/: cupy_.py  numba_.py  tensorflow_.py  torch_.py  utils.py
array-exchange/src/benchmark/run/: __init__.py  cupybench.py  dispatch.py  extract.py  log.py  nsys.py  profiler.py  tfbench.py  torchbench.py
investigation/python/: cpu.md
original-investigation/: README.md  cuda.md  memory.md  opencl.md
original-investigation/python/: README.md  cpu-interop.md  gpu-interop.md
original-investigation/rust/: README.md
python/: README.md
rust/: README.md
sycl/: README.md
