[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gpu-interoperability"
version = "0.0.0"
description = "Test array exchange"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
readme = "README.md"
packages = [
  { include = "benchmark", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.23.3"
rich = "^12.6.0"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
cupy-cuda11x = "^11.1.0"
# tensorflow = "^2.10.0"
torch = {version = "^1.12.1+cu116", source = "torch-cuda"}
numba = "^0.56.2"

[tool.poetry.group.rocm]
optional = true

[tool.poetry.group.rocm.dependencies]
cupy-rocm-5-0 = "^11.1.0"
# tensorflow-rocm = "2.10.0.520"
# torch = {version = "1.12.1+rocm5.1.1", source = "torch-rocm"}



[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pdbpp = "^0.10.3"
Sphinx = "^5.2.3"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true


[[tool.poetry.source]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm5.1.1"
default = false
secondary = true

[tool.poetry.scripts]
bench = "benchmark.run:run"
dispatch = "benchmark.run.nsys:run"


[tool.poe.tasks]
docs = { "shell" = "cd docs; make html" }
docs-clean = { "shell" = "cd docs; make clean" }
docs-clean-apidoc = { "shell" = "git clean -fdx docs/source/" }
docs-cleanall = ["docs-clean", "docs-clean-apidoc"]
